--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       <a class="links links_second" href="https://www.github.com/khuei" target="_blank">Github</a>
     </div>
     <div class="links links_third">
-      <a class="links links_third" href="https://open.spotify.com/user/vv2tvtedkg492dt5w7d2rdr9u?si=44cd946501494720" target="_blank">Spotify</a>
+      <a class="links links_third" href="https://www.instagram.com/not_khue/" target="_blank">Instagram</a>
+    </div>
+    <div class="links links_fourth">
+      <a class="links links_fourth" href="https://open.spotify.com/user/vv2tvtedkg492dt5w7d2rdr9u?si=44cd946501494720" target="_blank">Spotify</a>
     </div>
   </body>
 </html>
