--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
     <div class="links links_fourth">
       <a class="links links_fourth" href="https://open.spotify.com/user/vv2tvtedkg492dt5w7d2rdr9u?si=44cd946501494720" target="_blank">Spotify</a>
     </div>
+    <div class="links links_fifth">
+      <a class="links links_fifth" href=" https://www.linkedin.com/in/khuen" target="_blank">Linkedin</a>
+    </div>
   </body>
 </html>
