--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>Khue Nguyen</h1>
 
     <div class="links links_first">
-      <a class="links links_first" href="https://khuei.github.io" target="_blank">Website</a>
+      <a class="links links_first" href=" https://www.linkedin.com/in/khuen" target="_blank">Linkedin</a>
     </div>
     <div class="links links_second">
       <a class="links links_second" href="https://www.github.com/khuei" target="_blank">Github</a>
@@ -36,7 +36,7 @@
       <a class="links links_fourth" href="https://open.spotify.com/user/vv2tvtedkg492dt5w7d2rdr9u?si=44cd946501494720" target="_blank">Spotify</a>
     </div>
     <div class="links links_fifth">
-      <a class="links links_fifth" href=" https://www.linkedin.com/in/khuen" target="_blank">Linkedin</a>
+      <a class="links links_fifth" href="https://khuei.github.io" target="_blank">Launch Full Website</a>
     </div>
   </body>
 </html>
